--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ jdk:
 
 sudo: false
 
-script: cd 20151214_challenge_245_easy_date_dilemma/java/date-dillema
+script: cd 20151214_challenge_245_easy_date_dilemma/java/date-dillema && ./gradle test
