testing travis ci scala support

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ sudo: false
 
 script: 
   - cd 20151214_challenge_245_easy_date_dilemma/java/date-dillema && gradle test
-  - cd 20151214_challenge_245_easy_date_dilemma/scala/date-dillema && scala test
+  - cd ../20151214_challenge_245_easy_date_dilemma/scala/date-dillema && scala test
