--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ jdk:
 sudo: false
 
 script: 
-  - ls
   - cd 20151214_challenge_245_easy_date_dilemma/java/date-dillema && gradle test
+  - ls $HOME/
