--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ jdk:
 
 sudo: false
 
-script: 
-  - cd 20151214_challenge_245_easy_date_dilemma/java/date-dillema && gradle test
+script:
+  - pwd
   - ls $HOME/
+  - cd 20151214_challenge_245_easy_date_dilemma/java/date-dillema && gradle test
