--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ jdk:
 sudo: false
 
 script:
+  - ls $TRAVIS_BUILD_DIR
   - cd 20151214_challenge_245_easy_date_dilemma/java/date-dillema && gradle test
   - cd ~/build/20151214_challenge_245_easy_date_dilemma/scala/date-dillema && sbt test
