--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ sudo: false
 script:
   - ls $TRAVIS_BUILD_DIR
   - cd 20151214_challenge_245_easy_date_dilemma/java/date-dillema && gradle test
-  - cd ~/build/20151214_challenge_245_easy_date_dilemma/scala/date-dillema && sbt test
+  - cd $TRAVIS_BUILD_DIR/20151214_challenge_245_easy_date_dilemma/scala/date-dillema && sbt test
