--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ jdk:
 sudo: false
 cache:
   directories:
-  - $HOME/.m2
+    - $HOME/.m2
+    - $HOME/.ivy2/cache
+    - $HOME/.sbt/boot/
 script:
   - cd 20151214_challenge_245_easy_date_dilemma/java/date-dillema && gradle test
   - cd $TRAVIS_BUILD_DIR/20151214_challenge_245_easy_date_dilemma/scala/date-dillema && sbt test
