--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,10 @@ jdk:
 
 matrix:
     include:
-        - python: 3.5
-          os: linux
-          dist: trusty
-        - scala: 2.11.2
-          os: linux
-          dist: trusty
-        - go: tip
-          os: linux
+        - os: linux
+          python: 3.5
+          scala: 2.11.2
+          go: tip          
           dist: trusty
 cache:
   directories:
